--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-# MySQL properties
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/mydbtest?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
-db.username=root
-db.password=root
+server.port = 8080
 
-# Hibernate properties
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
-hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-hibernate.format_sql=true
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/mydbtest?serverTimezone=Europe/Minsk&useSSL=false
+spring.datasource.username = root
+spring.datasource.password = root
+spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 
-spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.generate-ddl = true
+spring.jpa.hibernate.ddl-auto = update
+
+spring.mvc.hiddenmethod.filter.enabled = true
